2002-07-05  Sergey Chaban <serge@wildwestsoftware.com>

	* SortedList.cs: Implemented thread-safe wrapper. Changed some
	args to camelCase.

2002-07-02  Nick Drochak  <ndrochak@gol.com>

	* SortedList.cs: Constructors should use the capacity given regardless 
	how small. After a Clear() the Capacit should be 16. Since a Dictionary
	might be used in the constructor, make sure we trap exceptions thrown
	by the Comparer, like in Add().

2002-06-30  Nick Drochak  <ndrochak@gol.com>

	* SortedList.cs: Many fixed. A lot of checking for null and throwing
	exceptions.  A few logic bugs fixed as well

2002-06-25   Nick Drochak  <ndrochak@gol.com>

	* Queue.cs (CopyTo): Fix logic for copying the circular array.
	(Enqueue): Use actual length of array to determine when to grow
	(QueueEnumerator) Fixed Current to use array length, not capacity, and
	fixed off-by-one errror in MoveNext().

Tue Jun 4 13:08:43 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* ArrayList.cs: fixed RemoveAt() implementation.

2002-05-27  Nick Drochak  <ndrochak@gol.com>

	* ArrayList.cs (LastIndexOf): Return -1 if searching for null, also
	fix check of parameters sent to make sure we don't search beyond the
	beginning of the list.
	(ListWrapper): Throw exception if called with null.
	We now pass all unit tests.

2002-05-23  Duncan Mak  <duncan@ximian.com>

	* ArrayList.cs (Wrapper): Preliminary implementation of
	ArrayList.Wrapper (IList).

2002-05-22  Martin Baulig  <martin@gnome.org>

	* ArrayList.cs: Made count, capacity and dataArray the first three
	fields in the class.  They're read by the reflection library.

2002-05-21  Lawrence Pit  <loz@cable.a2000.nl>

	* ArrayList.cs: Fixed bug where a capacity of 0 could be reached, 
	thereby causing problems when trying to add elements.

2002-05-06  Duncan Mak  <duncan@ximian.com>

	* Queue.cs (TrimToSize): Implemented.
	
2002-05-05  Nick Drochak  <ndrochak@gol.com>

	* ArrayList.cs: Throw RankException when constructing from a 